--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,27 @@
 
    <body>
       <div class="container">
-         <h1>Manage Node.js projects and npm packages using package.json</h1>
-         <h3>Part 1 of Free Code Camp Backend Challenges</h3>
+         <h1>API Basejump: Timestamp microservice</h1>
+         <div>
+           <h5>User stories:</h5>
+           <ul>
+             <li>I can pass a string as a parameter, 
+                 and it will check to see whether that string contains either a unix timestamp 
+               or a natural language date (example: January 1, 2016)
+             </li>
+             <li>
+               If it does, it returns both the Unix timestamp and the natural language form of that date.
+             </li>
+             <li>If it does not contain a date or Unix timestamp, it returns null for those properties.</li>
+           </ul>
+           
+        </div>
+         <h2>Example usage:</h2>
+         <code>https://timestamp-ms.herokuapp.com/December%2015,%202015</code>
+         <code>https://timestamp-ms.herokuapp.com/1450137600</code>
+        <h2>Example output:</h2>
+        <code>{ "unix": 1450137600, "natural": "December 15, 2015" }</code>
+      
       </div>
    </body>
 
