--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 /****** Main Styling ******/
 
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family:sans-serif;
 	font-size: 16px;
 	color: #222;
 	background-color: #ECF0F1;
